Prevent x overflow on safari

--- a/app/assets/stylesheets/base/_resets.scss
+++ b/app/assets/stylesheets/base/_resets.scss
@@ -6,6 +6,12 @@
   padding: 0;
 }
 
+html, body {
+  position: relative;
+  overflow-x: hidden;
+}
+
+
 html {
   box-sizing: border-box;
   font-size: 62.5%; 
@@ -13,7 +19,6 @@ html {
 
 body {
   margin: 0 auto;
-  overflow-x: hidden;
 }
 
 a {
